--- a/public/css/general/style.css
+++ b/public/css/general/style.css
@@ -34,7 +34,8 @@
 
 .xsearch-btn i{
     margin-left: -35px;
-color: #8b7c7c;}
+color: #8b7c7c;
+}
 
 .badge-wrap{
     font-size: 14px;
@@ -200,6 +201,10 @@ margin-left: -13px;}
     padding: 70px 0;
 }
 
+#sidebar.active li ul.list-unstyled i{
+    padding-left: 10px;
+}
+
 #sidebar ul p {
     color: #fff;
     padding: 10px;
@@ -225,7 +230,7 @@ margin-left: -13px;}
 }
 
 #sidebar.active ul li a i {
-    margin-right:  0;
+    margin-left: 0px;
     display: block;
     font-size: 1.2em;
     margin-bottom: 10px;
@@ -346,4 +351,88 @@ margin-left: -13px;}
        #sidebarCollapse.active span:last-of-type {
            transform: rotate(-45deg) translate(1px, -1px);
        }
+}
+
+/* Sidebar css end */
+
+#users-table_wrapper{
+    width: 100%;
+}
+
+#users-table_length{
+    display: none;
+}
+
+#users-table_info{
+    font-size: 13px;
+    padding-left: 10px;
+}
+
+#users-table_paginate{
+    font-size: 13px;
+}
+
+#users-table_filter label{
+    font-size: 0;
+}
+
+#users-table_filter input[type="search"]{
+    border-radius: 8px !important;
+    height: 30px;
+    width: 250px;
+    margin-right: 20px;
+    font-size: 13px !important;
+    border: 1px solid #c3c3c3 !important;
+}
+
+.xthead{
+    height: 60px;
+    background: #f3f6ff;
+    color: #8aa1b1;}
+
+.xthead th{
+    font-weight: 600 !important;
+    font-size: 15px;
+}
+
+table.dataTable tbody tr{
+    height: 60px;
+font-size: 13px;}
+
+table.dataTable .badge{
+    font-size: 14px;
+    padding: 6px 10px;
+    border-radius: 10px;
+    font-weight: 400;
+}
+
+.bg-red{
+    background: #fd3b60 !important;
+}
+
+.bg-blue{
+    background: #1e8ff1 !important;
+padding: 6px 30px !important;}
+
+.ximg{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    background: gray;
+    margin-right: 5px;
+}
+
+p.xname{
+    font-weight: 900;
+color: #41556e;}
+
+i.xsearch-btn {
+    margin-left: -45px;
+    color: #8b7c7c;
+font-size: 16px;margin-right: 28px;}
+
+.xtable-name{
+    position: absolute;
+    font-weight: 600;
+    padding-left: 20px;
 }
