--- a/public/css/app.css
+++ b/public/css/app.css
@@ -475,7 +475,7 @@ select {
   flex-shrink: 0;
   height: 1rem;
   width: 1rem;
-  color: #2563eb;
+  color: #222156;
   background-color: #fff;
   border-color: #6b7280;
   border-width: 1px;
