--- a/public/css/general/style.css
+++ b/public/css/general/style.css
@@ -436,3 +436,58 @@ font-size: 16px;margin-right: 28px;}
     font-weight: 600;
     padding-left: 20px;
 }
+
+.full-width{
+    width: 100% !important;
+}
+
+.xbtn-primary{
+    background: #1e8ff1 !important;
+    color: #fff;
+    padding: 1px 10px;
+    border-radius: 10px;
+    font-size: 12px;
+}
+
+.xbtn-success{
+    background: green;
+    color: #fff;
+    padding: 3px 12px;
+    border-radius: 10px;
+    font-size: 12px;
+}
+
+.xbtn-success:hover{
+    background: gold;
+}
+
+.xbtn-secondary{
+    color: rgb(37, 37, 37);
+    padding: 1px 10px;
+    border-radius: 10px;
+    font-size: 12px;
+}
+
+.xbtn-secondary:hover{
+    background: #555 !important;
+    color: #fff;
+}
+
+.x-checkbox{
+    border-radius: 3px !important;
+}
+
+.xtable{
+    font-size: 13px;
+}
+
+.xtable thead{
+    background: #f3f6ff;
+    height: 50px;
+    color: #8aa1b1;
+line-height: 2;}
+
+.xtable tr{
+    height: 50px;
+    line-height: 2;
+}
