--- a/public/css/general/style.css
+++ b/public/css/general/style.css
@@ -491,3 +491,10 @@ line-height: 2;}
     height: 50px;
     line-height: 2;
 }
+
+.alert{
+    position: fixed;
+    right: 0;
+    z-index: 999;
+    top: 70;
+}
